--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.6",
     "react-paginate": "^8.1.4",
     "react-transition-group": "^4.4.5",
     "sass": "^1.60.0"
