--- a/server/vercel.json
+++ b/server/vercel.json
@@ -12,5 +12,13 @@
       "src": "/(.*)",
       "dest": "/"
     }
-  ]
+  ],
+  "cron":[{
+    "name":"cron",
+    "schedule":"* * * * *",
+    "command":"npm run cron",
+    "output":{
+      "background":true
+    }
+  }]
 }
