cron test把正式需要執行的腳本放進來

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -14,7 +14,7 @@
     }
   ],
   "crons": [{
-    "path": "/api/cron",
-    "schedule": "39 4 4 * *"
+    "path": "/api/cron-daily",
+    "schedule": "0 15 * * *"
   }]
 }
